fix icon spacing

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -23,7 +23,7 @@
 	}
 
 	.social-icons a i{
-		margin:0 5px;
+		margin:0 10px;
 	}
 
 	.mouse-icon{
@@ -156,7 +156,7 @@
   		font-size: 15px;
   		margin-right: 0;
 	}
-}
+
 
 /* Landscape Mobile */
 @media only screen and (min-width : 480px) and (max-width : 767px) {
@@ -174,7 +174,7 @@
 	}
 
 	.social-icons a i{
-		margin:0 7px;
+		margin:0 10px;
 	}
 
 	.mouse-icon{
