--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ SOCIAL ICON
     position: relative;
     color: #fff;
     font-size: 18px;
-    margin: 0 7px;
+    margin: 0 10px;
     line-height: 40px;
     text-align: center;
     width: 40px;
